y.output
Terminals unused in grammar

    NEW_LINE
    TAB
    OR
    AND
    GT
    LT
    GE
    LE
    EQ
    NEQ


Grammar

    0 $accept: start $end

    1 start: %empty
    2      | statement_list

    3 statement_list: statement
    4               | statement_list statement

    5 statement: NAME '=' expression ';'
    6          | IF '(' expression ')' '{' statement_list '}'
    7          | IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}'
    8          | WHILE '(' expression ')' '{' statement_list '}'
    9          | print_func ';'

   10 expression: expression '+' expression
   11           | expression '-' expression
   12           | expression '/' expression
   13           | expression '*' expression
   14           | expression COMPARATION expression
   15           | '-' expression
   16           | '(' expression ')'
   17           | NUMBER
   18           | NAME
   19           | NAME '(' expression ')'

   20 print_func: PRINT '(' expression ')'
   21           | PRINT '(' QSTRING ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6 7 8 16 19 20 21
    ')' (41) 6 7 8 16 19 20 21
    '*' (42) 13
    '+' (43) 10
    '-' (45) 11 15
    '/' (47) 12
    ';' (59) 5 9
    '=' (61) 5
    '{' (123) 6 7 8
    '}' (125) 6 7 8
    error (256)
    NAME <symp> (258) 5 18 19
    NUMBER <string> (259) 17
    QSTRING <string> (260) 21
    COMPARATION <string> (261) 14
    NEW_LINE (262)
    TAB (263)
    PRINT (264) 20 21
    IF (265) 6 7
    ELSE (266) 7
    WHILE (267) 8
    OR (268)
    AND (269)
    GT (270)
    LT (271)
    GE (272)
    LE (273)
    EQ (274)
    NEQ (275)
    UMINUS (276)
    LOWER_THAN_ELSE (277)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    start (34)
        on left: 1 2
        on right: 0
    statement_list <string> (35)
        on left: 3 4
        on right: 2 4 6 7 8
    statement <string> (36)
        on left: 5 6 7 8 9
        on right: 3 4
    expression <string> (37)
        on left: 10 11 12 13 14 15 16 17 18 19
        on right: 5 6 7 8 10 11 12 13 14 15 16 19 20
    print_func <string> (38)
        on left: 20 21
        on right: 9


State 0

    0 $accept: . start $end

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    $default  reduce using rule 1 (start)

    start           go to state 5
    statement_list  go to state 6
    statement       go to state 7
    print_func      go to state 8


State 1

    5 statement: NAME . '=' expression ';'

    '='  shift, and go to state 9


State 2

   20 print_func: PRINT . '(' expression ')'
   21           | PRINT . '(' QSTRING ')'

    '('  shift, and go to state 10


State 3

    6 statement: IF . '(' expression ')' '{' statement_list '}'
    7          | IF . '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    '('  shift, and go to state 11


State 4

    8 statement: WHILE . '(' expression ')' '{' statement_list '}'

    '('  shift, and go to state 12


State 5

    0 $accept: start . $end

    $end  shift, and go to state 13


State 6

    2 start: statement_list .
    4 statement_list: statement_list . statement

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    $default  reduce using rule 2 (start)

    statement   go to state 14
    print_func  go to state 8


State 7

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


State 8

    9 statement: print_func . ';'

    ';'  shift, and go to state 15


State 9

    5 statement: NAME '=' . expression ';'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 20


State 10

   20 print_func: PRINT '(' . expression ')'
   21           | PRINT '(' . QSTRING ')'

    NAME     shift, and go to state 16
    NUMBER   shift, and go to state 17
    QSTRING  shift, and go to state 21
    '-'      shift, and go to state 18
    '('      shift, and go to state 19

    expression  go to state 22


State 11

    6 statement: IF '(' . expression ')' '{' statement_list '}'
    7          | IF '(' . expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 23


State 12

    8 statement: WHILE '(' . expression ')' '{' statement_list '}'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 24


State 13

    0 $accept: start $end .

    $default  accept


State 14

    4 statement_list: statement_list statement .

    $default  reduce using rule 4 (statement_list)


State 15

    9 statement: print_func ';' .

    $default  reduce using rule 9 (statement)


State 16

   18 expression: NAME .
   19           | NAME . '(' expression ')'

    '('  shift, and go to state 25

    $default  reduce using rule 18 (expression)


State 17

   17 expression: NUMBER .

    $default  reduce using rule 17 (expression)


State 18

   15 expression: '-' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 26


State 19

   16 expression: '(' . expression ')'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 27


State 20

    5 statement: NAME '=' expression . ';'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression

    COMPARATION  shift, and go to state 28
    '-'          shift, and go to state 29
    '+'          shift, and go to state 30
    '*'          shift, and go to state 31
    '/'          shift, and go to state 32
    ';'          shift, and go to state 33


State 21

   21 print_func: PRINT '(' QSTRING . ')'

    ')'  shift, and go to state 34


State 22

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   20 print_func: PRINT '(' expression . ')'

    COMPARATION  shift, and go to state 28
    '-'          shift, and go to state 29
    '+'          shift, and go to state 30
    '*'          shift, and go to state 31
    '/'          shift, and go to state 32
    ')'          shift, and go to state 35


State 23

    6 statement: IF '(' expression . ')' '{' statement_list '}'
    7          | IF '(' expression . ')' '{' statement_list '}' ELSE '{' statement_list '}'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression

    COMPARATION  shift, and go to state 28
    '-'          shift, and go to state 29
    '+'          shift, and go to state 30
    '*'          shift, and go to state 31
    '/'          shift, and go to state 32
    ')'          shift, and go to state 36


State 24

    8 statement: WHILE '(' expression . ')' '{' statement_list '}'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression

    COMPARATION  shift, and go to state 28
    '-'          shift, and go to state 29
    '+'          shift, and go to state 30
    '*'          shift, and go to state 31
    '/'          shift, and go to state 32
    ')'          shift, and go to state 37


State 25

   19 expression: NAME '(' . expression ')'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 38


State 26

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | '-' expression .

    $default  reduce using rule 15 (expression)


State 27

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   16           | '(' expression . ')'

    COMPARATION  shift, and go to state 28
    '-'          shift, and go to state 29
    '+'          shift, and go to state 30
    '*'          shift, and go to state 31
    '/'          shift, and go to state 32
    ')'          shift, and go to state 39


State 28

   14 expression: expression COMPARATION . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 40


State 29

   11 expression: expression '-' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 41


State 30

   10 expression: expression '+' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 42


State 31

   13 expression: expression '*' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 43


State 32

   12 expression: expression '/' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    '-'     shift, and go to state 18
    '('     shift, and go to state 19

    expression  go to state 44


State 33

    5 statement: NAME '=' expression ';' .

    $default  reduce using rule 5 (statement)


State 34

   21 print_func: PRINT '(' QSTRING ')' .

    $default  reduce using rule 21 (print_func)


State 35

   20 print_func: PRINT '(' expression ')' .

    $default  reduce using rule 20 (print_func)


State 36

    6 statement: IF '(' expression ')' . '{' statement_list '}'
    7          | IF '(' expression ')' . '{' statement_list '}' ELSE '{' statement_list '}'

    '{'  shift, and go to state 45


State 37

    8 statement: WHILE '(' expression ')' . '{' statement_list '}'

    '{'  shift, and go to state 46


State 38

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   19           | NAME '(' expression . ')'

    COMPARATION  shift, and go to state 28
    '-'          shift, and go to state 29
    '+'          shift, and go to state 30
    '*'          shift, and go to state 31
    '/'          shift, and go to state 32
    ')'          shift, and go to state 47


State 39

   16 expression: '(' expression ')' .

    $default  reduce using rule 16 (expression)


State 40

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   14           | expression COMPARATION expression .

    '-'  shift, and go to state 29
    '+'  shift, and go to state 30
    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 14 (expression)


State 41

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   11           | expression '-' expression .
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 11 (expression)


State 42

   10 expression: expression . '+' expression
   10           | expression '+' expression .
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression

    '*'  shift, and go to state 31
    '/'  shift, and go to state 32

    $default  reduce using rule 10 (expression)


State 43

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   13           | expression '*' expression .
   14           | expression . COMPARATION expression

    $default  reduce using rule 13 (expression)


State 44

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   12           | expression '/' expression .
   13           | expression . '*' expression
   14           | expression . COMPARATION expression

    $default  reduce using rule 12 (expression)


State 45

    6 statement: IF '(' expression ')' '{' . statement_list '}'
    7          | IF '(' expression ')' '{' . statement_list '}' ELSE '{' statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    statement_list  go to state 48
    statement       go to state 7
    print_func      go to state 8


State 46

    8 statement: WHILE '(' expression ')' '{' . statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    statement_list  go to state 49
    statement       go to state 7
    print_func      go to state 8


State 47

   19 expression: NAME '(' expression ')' .

    $default  reduce using rule 19 (expression)


State 48

    4 statement_list: statement_list . statement
    6 statement: IF '(' expression ')' '{' statement_list . '}'
    7          | IF '(' expression ')' '{' statement_list . '}' ELSE '{' statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    '}'    shift, and go to state 50

    statement   go to state 14
    print_func  go to state 8


State 49

    4 statement_list: statement_list . statement
    8 statement: WHILE '(' expression ')' '{' statement_list . '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    '}'    shift, and go to state 51

    statement   go to state 14
    print_func  go to state 8


State 50

    6 statement: IF '(' expression ')' '{' statement_list '}' .
    7          | IF '(' expression ')' '{' statement_list '}' . ELSE '{' statement_list '}'

    ELSE  shift, and go to state 52

    $default  reduce using rule 6 (statement)


State 51

    8 statement: WHILE '(' expression ')' '{' statement_list '}' .

    $default  reduce using rule 8 (statement)


State 52

    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE . '{' statement_list '}'

    '{'  shift, and go to state 53


State 53

    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE '{' . statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    statement_list  go to state 54
    statement       go to state 7
    print_func      go to state 8


State 54

    4 statement_list: statement_list . statement
    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list . '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    '}'    shift, and go to state 55

    statement   go to state 14
    print_func  go to state 8


State 55

    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}' .

    $default  reduce using rule 7 (statement)
